complete Foo-Bar-Quix kata by Mohamed TIBA

--- a/foobarquix-ui/src/app/foo-bar-quix-form/foo-bar-quix-form.component.html
+++ b/foobarquix-ui/src/app/foo-bar-quix-form/foo-bar-quix-form.component.html
@@ -1,3 +1,5 @@
-<div class="container"> 
-    To Be Completed
+<div class="container">
+    <label for="exampleInput">Number to Convert</label>
+    <input type="text" class="form-control" id="exampleInput" placeholder="inputNumber" [(ngModel)]="testCase.input">
+    <button type="submit" class="btn btn-primary" (click)="submitNumber()">Convert</button>
 </div>
